fix:color print in filter does not showing color after moving page 0

--- a/src/index.css
+++ b/src/index.css
@@ -168,3 +168,30 @@ body{
   margin-right: 10px;
   margin-bottom: 10px;
 }
+
+@layer components {
+  .no-spinner {
+    -moz-appearance: textfield;
+    appearance: textfield;
+  }
+
+  .no-spinner::-webkit-outer-spin-button,
+  .no-spinner::-webkit-inner-spin-button {
+    margin: 0;
+    opacity: 1;
+    -webkit-appearance: "Always Show Up/Down Arrows";
+  }
+}
+
+@layer components {
+  .spinner {
+    -moz-appearance: textfield;
+    appearance: textfield;
+  }
+
+  .spinner::-webkit-outer-spin-button,
+  .spinner::-webkit-inner-spin-button {
+    margin: 0;
+    -webkit-appearance: none;
+  }
+}
